# solana-contracts

./: .gitignore  Cargo.toml  README.md  codama.mjs  justfile  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
clients/ts/custodial-gatekeeper/: package.json
clients/ts/minter/: package.json  tsconfig.json
clients/ts/permission-manager/: package.json
clients/ts/redemption/: package.json
clients/ts/spiko-token/: package.json
clients/ts/spiko-transfer-hook/: index.ts  package.json
codegen/: generate-clients.ts
codegen/lib/: spiko-codama-builder.ts  utils.ts
codegen/lib/updates/: append-account-version.ts  index.ts
e2e/: e2e.ts  pnpm-lock.yaml  tsconfig.json
e2e/lib/: events.ts  shared.ts
idl/: custodial_gatekeeper.json  minter.json  permission_manager.json  redemption.json  spiko_token.json  spiko_transfer_hook.json
integration-tests/: Cargo.toml
integration-tests/tests/: integration.rs
programs/custodial-gatekeeper/: Cargo.toml  build.rs
programs/custodial-gatekeeper/src/: entrypoint.rs  error.rs  helpers.rs  lib.rs  state.rs
programs/custodial-gatekeeper/tests/: custodial_gatekeeper.rs
programs/minter/: Cargo.toml  build.rs
programs/minter/src/: entrypoint.rs  error.rs  (+6 more)
programs/permission-manager/: Cargo.toml  build.rs
programs/redemption/: Cargo.toml  build.rs
programs/spiko-common/: Cargo.toml
programs/spiko-events/: Cargo.toml
programs/spiko-permission/: Cargo.toml
programs/spiko-token/: Cargo.toml  build.rs
programs/spiko-token/src/: entrypoint.rs  error.rs  event_types.rs  events.rs  helpers.rs  lib.rs  shank_idl.rs  state.rs
programs/spiko-token/src/discriminators/: event.rs  instruction.rs
programs/spiko-token/src/events/: burn.rs  mint.rs  mod.rs  redeem_initiated.rs  redemption_contract_set.rs  token_initialized.rs  token_paused.rs  token_unpaused.rs
programs/spiko-token/src/instructions/: approve.rs  burn.rs  burn_from.rs  definition.rs  initialize.rs  mint.rs  mod.rs  pause.rs  redeem.rs  set_redemption_contract.rs  transfer.rs  unpause.rs
programs/spiko-token/src/instructions/burn/: accounts.rs  data.rs  mod.rs  processor.rs
programs/spiko-token/src/instructions/burn_from/: accounts.rs  data.rs  mod.rs  processor.rs
programs/spiko-token/src/instructions/initialize/: accounts.rs  data.rs  mod.rs  processor.rs
programs/spiko-token/src/instructions/mint/: accounts.rs  data.rs  mod.rs  processor.rs
programs/spiko-token/src/instructions/pause/: accounts.rs  mod.rs  processor.rs
programs/spiko-token/src/instructions/redeem/: accounts.rs  data.rs  mod.rs  processor.rs
programs/spiko-token/src/instructions/set_redemption_contract/: accounts.rs  data.rs  mod.rs  processor.rs
programs/spiko-token/src/instructions/transfer/: accounts.rs  data.rs  mod.rs  processor.rs
programs/spiko-token/src/instructions/unpause/: accounts.rs  mod.rs  processor.rs
programs/spiko-token/tests/: spiko_token.rs
programs/spiko-transfer-hook/: Cargo.toml  build.rs
programs/spiko-transfer-hook/src/: entrypoint.rs  error.rs  event_types.rs  events.rs  helpers.rs  lib.rs  shank_idl.rs  state.rs
programs/spiko-transfer-hook/src/discriminators/: event.rs  instruction.rs
programs/spiko-transfer-hook/src/events/: mod.rs  transfer.rs
programs/spiko-transfer-hook/src/instructions/: definition.rs  init_extra_account_metas.rs  mod.rs  transfer_hook_execute.rs
programs/spiko-transfer-hook/src/instructions/init_extra_account_metas/: accounts.rs  mod.rs  processor.rs
programs/spiko-transfer-hook/src/instructions/transfer_hook_execute/: accounts.rs  data.rs  mod.rs  processor.rs
script_v2/: e2e.ts  package.json  pnpm-lock.yaml
script_v2/lib/: events.ts  shared.ts
scripts/: E2ETest.ts  burn.ts  cancel-redemption.ts  deploy.ts  execute-redemption.ts  generate-ts-clients.ts  mint.ts  package.json  pnpm-lock.yaml  redeem.ts  smoke-test.ts  tsconfig.json  whitelist.ts
scripts/lib/: constants.ts  events.ts  instructions.ts  pda.ts  shared.ts
(+251 files in other folders)
