[workspace]
resolver = "2"
members = [
    "programs/spiko-events",
    "programs/spiko-common",
    "programs/spiko-permission",
    "programs/permission-manager",
    "programs/spiko-token",
    "programs/spiko-transfer-hook",
    "programs/minter",
    "programs/redemption",
    "programs/custodial-gatekeeper",
    "integration-tests",
]

[workspace.dependencies]
pinocchio = { version = "0.10", features = ["cpi"] }
pinocchio-system = "0.5"
pinocchio-token = "0.5"
pinocchio-token-2022 = "0.2"
pinocchio-log = "0.5"
const-crypto = "0.3"
codama = "0.7"
serde_json = "1.0"
thiserror = "2.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3
incremental = false
