[package]
name = "spiko-token"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = { workspace = true }
pinocchio-system = { workspace = true }
pinocchio-token = { workspace = true }
pinocchio-token-2022 = { workspace = true }
pinocchio-log = { workspace = true }
permission-manager = { path = "../permission-manager", features = ["no-entrypoint"] }
spiko-events = { path = "../spiko-events" }

[dev-dependencies]
mollusk-svm = "0.10"
solana-pubkey = "4.0"
solana-account = "3.2"
solana-instruction = "3.0"
solana-program-error = "3.0"
solana-sdk-ids = "3.0"

[features]
default = ["perf"]
perf = []
no-entrypoint = []
