[package]
name = "spiko-transfer-hook"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = { workspace = true }
pinocchio-system = { workspace = true }
pinocchio-log = { workspace = true }
const-crypto = { workspace = true }
codama = { workspace = true }
thiserror = { workspace = true }
permission-manager = { path = "../permission-manager", features = ["no-entrypoint"] }
spiko-token = { path = "../spiko-token", features = ["no-entrypoint"] }
spiko-common = { path = "../spiko-common" }
spiko-permission = { path = "../spiko-permission" }
spiko-events = { path = "../spiko-events" }

[build-dependencies]
codama = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
mollusk-svm = "0.10"
solana-pubkey = "4.0"
solana-account = "3.2"
solana-instruction = "3.0"
solana-program-error = "3.0"
solana-sdk-ids = "3.0"
sha2 = "0.10"

[features]
default = ["perf"]
perf = []
no-entrypoint = []
idl = []
